log
Thu 28 Mar 2024 09:38:30 PM UTC: 
 tests:  0|6
total_score: 0/70
e9ed321
Thu 28 Mar 2024 09:43:35 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
221542d
Thu 28 Mar 2024 09:45:01 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:47:5: error: expected ‘;’ before ‘return’
   47 |     return NULL;
      |     ^~~~~~
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9df7e0b
